--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,68 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  border: none;
+  font-family: 'Montserrat Alternates', sans-serif;
+}
+header{
+  background-color: black;
+  padding: 50px 0px;
+  width: 100%;
+}
+.container{
+  margin: 0 auto;
+  max-width: 1300px;
+}
+.header_nav{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  gap: 20px;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.header_nav a{
+ color: white;
+ font-size: 16px;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.h-main{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-button:hover {
-  border-color: #646cff;
+.h-content{
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.h-icons{
+  display: flex;
+  align-items: center;
+  gap: 25px;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.banner{
+  padding: 50px;
+  background-image: url("/public/Banner/banner.png");
+  background-repeat: no-repeat;
+  height: 709px;
+}
+.banner-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 75px;
+}
+.banner-content img{
+  width: 50%;
+}
+.banner-content h1{
+  color: white;
+  font-size: 32px;
+}
+.banner-btn{
+  padding: 25px 75px;
+  background-color: #735184;
+  color: white;
+  border-radius: 20px;
 }
