--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,8 @@ header{
   background: rgba(0, 0, 0, 0.9);
 }
 .sContainer{
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   justify-content: space-between;
   align-items: center;
 }
@@ -82,6 +83,7 @@ header{
   color: white;
   font-size: 18px;
   background-color: black;
+  padding: 10px;
 }
 .tow h2{
   padding: 15px;
