--- a/src/index.css
+++ b/src/index.css
@@ -183,33 +183,35 @@ body{
   justify-content: center;
 }
 .add input{
-  border: 2px solid white;
-  color: white;
-  width: 25%;
+  border: 2px solid black;
+  color: black;
+  width: 200%;
   background: none;
   text-align: center;
   outline: none;
   padding: 10px 30px;
+  border-radius: 30px;
 }
 .add textarea{
-  border: 2px solid white;
+  border: 2px solid black;
   color: white;
   background: none;
   text-align: center;
-  width: 25%;
+  width: 200%;
   outline: none;
   padding: 10px 30px;
+  border-radius: 30px;
 }
 .add button{
   border: 2px solid white;
   color: white;
   background: black;
   outline: none;
-  width: 25%;
+  width: 200%;
   padding: 10px 30px;
 }
 .add label{
-  color: white;
+  color: black;
   font-size: 18px;
 }
 .addForm{
@@ -219,5 +221,21 @@ body{
   width: 80%;
 }
 .addForm p{
+  color: black;
+}
+.sliderImg{
+  width: 100%;
+}
+.modalBtn{
+  border: 2px solid white;
   color: white;
+  background: black;
+  outline: none;
+  width: 25%;
+  padding: 10px 30px;
+}
+.modal-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
